# ChangeLog for net-libs/hubbub
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 May 2011; Michael Weber <xmw@gentoo.org> hubbub-0.1.0.ebuild:
  fixed deps

*hubbub-0.1.0 (02 May 2011)

  02 May 2011; Michael Weber <xmw@gentoo.org> +hubbub-0.1.0.ebuild,
  +metadata.xml:
  Initial import, bug 347471, thanks to inciner@gmail.com for the initial
  ebuild
