@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST hubbub-0.1.0-src.tar.gz 812540 RMD160 b48211e4a70366164f39a3a83b2ca0313dc3847c SHA1 c420c40e086866c78427dcc07a9b96da2725ceb7 SHA256 e8b7e87c7414317eb8f1ad4a7e202c0708d0cee14558c66d4d33a6f5465c664b
-EBUILD hubbub-0.1.0.ebuild 1301 RMD160 b9c874a1fc35b16f75625d7b046bf57e2f239148 SHA1 6acb8dd50d1b230376d813344f2c16781c1ed197 SHA256 a04889cd64855753c1f566cb4ac81e6d7114d98372c43be5442cdecf4a23dde2
-MISC ChangeLog 395 RMD160 99095f493c098a9581120c160d80fa7b218c65e9 SHA1 fe0cdfe2bcc022ad6a093533d56de2701245684b SHA256 92ec42fc2db370336ea39359eef71e272c09b8c616bce992a95de2acf8d76af4
+EBUILD hubbub-0.1.0.ebuild 529 RMD160 2afabbdf40507f933bc382eead8774fdccbb1d10 SHA1 993c5ad145caca019997f1388360de3affa62d5f SHA256 62f0672964360c30c2cad2332b7244c2ad1bf8f2832695e2694fb7efb66eeaef
+MISC ChangeLog 489 RMD160 7c8bf67dfeaa956e76afaf426f17d1af0085e223 SHA1 985eb661664cda4fdc26783dc2460d64bfdedfa1 SHA256 1262757ca4071bd08b27fab600f7bb8b9e411ce3ab9f83cc76944cf9314fa1bd
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2+/WkACgkQknrdDGLu8JD5QgD/VDFd1/YiglyBaFx8ahzyLCuv
-OMjxZ0/59nN0XWGz6SUA/2Oi//YgM0JLDO9Y6lB18PXjEwHuRmneh6MnBCXUopeH
-=fzUF
+iF4EAREIAAYFAk2/3esACgkQknrdDGLu8JBo2AD/cTOsQuOgzUBP8ReM1pOXpypB
+GiaUV8fh/w0/XumLq7UA/0iRbWtskr10+pJQNvTmQUz8rpUKO5QZ+WB/kkwY/ckO
+=5P+9
 -----END PGP SIGNATURE-----
