@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 May 2011; Michael Weber <xmw@gentoo.org> hubbub-0.1.0.ebuild:
+  moved to netsurf.eclass
+
   02 May 2011; Michael Weber <xmw@gentoo.org> hubbub-0.1.0.ebuild:
   fixed deps
 
